# open-thermoacoustics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  validation-scripts.yml
docs/: DOCS_ROADMAP.md  concepts.md  contributing-docs.md  getting-started.md  index.md  modeling-workflows.md  reference-mapping.md  troubleshooting.md
docs/api/: config.md  engine.md  gas.md  geometry.md  segments.md  solver.md  state-and-utils.md
docs/validation/: example-matrix.md  index.md  standing_wave_engine.md  standing_wave_refrigerator.md  traveling_wave_engine.md
examples/: coupled_onset_diagnostic.py  diagnose_energy_equation.py  helmholtz_resonator.py  lossy_duct_attenuation.py  quarter_wave_resonator.py  standing_wave_engine.py  standing_wave_engine_onset.py  standing_wave_refrigerator.py  standing_wave_refrigerator_tijani.py  standing_wave_resonator.py  test_shooting_method.py  traveling_wave_engine.py  traveling_wave_stub.py
examples/validation/: investigate_stkcirc_phase.py  solve_lrc1_loop.py  solve_optr.py  validate_acoustic_state.py  validate_anchor.py  validate_branch.py  validate_enclosed_transducer.py  validate_gamma_chain.py  validate_gamma_full.py  validate_iespeaker.py  validate_interface_conditions.py  validate_lrc1_loop.py  validate_lrc1_resonator.py  validate_optr_stkduct.py  validate_px.py  validate_radiation_branches.py  (+24 more)
scripts/: determinant_landscape.py  lambda_unity_diagnostic.py  loop_self_oscillation_diagnostic.py  offaxis_determinant_diagnostic.py  optimize_onset.py  optimize_traveling_wave.py  power_budget.py
tests/: __init__.py  test_branch.py  test_config.py  test_distributed_loop.py  test_gas_mixture.py  test_gas_properties.py  test_geometry.py  test_segments.py  test_segments_phase2.py  test_solver.py  test_stack_energy.py  test_standing_wave_engine.py  test_standing_wave_refrigerator.py  test_traveling_wave_engine.py  test_tx.py
(+63 files in other folders)
