[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openthermoacoustics"
version = "0.1.1"
description = "Open-source thermoacoustic engine and refrigerator design tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenThermoacoustics Contributors"}
]
keywords = ["thermoacoustics", "acoustics", "heat engine", "refrigerator", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.7.0",
]
config = [
    "pyyaml>=6.0.0",
]
all = [
    "openthermoacoustics[dev,viz,config]",
]

[project.urls]
Homepage = "https://github.com/openthermoacoustics/openthermoacoustics"
Documentation = "https://openthermoacoustics.readthedocs.io"
Repository = "https://github.com/openthermoacoustics/openthermoacoustics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=openthermoacoustics --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
